--- a/notebooks/scRNAseq_analysis.ipynb
+++ b/notebooks/scRNAseq_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "insured-respondent",
+   "id": "blank-crystal",
    "metadata": {},
    "source": [
     "# Analysis of scRNA-seq data"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "discrete-office",
+   "id": "innovative-success",
    "metadata": {},
    "source": [
     "## FeatureCounts quantification"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "female-reach",
+   "id": "incorporate-prime",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "powered-conversation",
+   "id": "agricultural-glory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "danish-moore",
+   "id": "demonstrated-trick",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "danish-teaching",
+   "id": "experimental-photograph",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "underlying-tracy",
+   "id": "resident-insulation",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dangerous-green",
+   "id": "supposed-biology",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "biological-strengthening",
+   "id": "critical-renewal",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "interior-moment",
+   "id": "thorough-poultry",
    "metadata": {},
    "outputs": [
     {
@@ -368,13 +368,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "regular-glory",
+   "id": "prime-serve",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2aba686ae880>]"
+       "[<matplotlib.lines.Line2D at 0x2b5d6e125250>]"
       ]
      },
      "execution_count": 9,
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "finite-phone",
+   "id": "mineral-chapter",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "apparent-agency",
+   "id": "competitive-optimum",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "governmental-aquatic",
+   "id": "driven-newark",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ruled-consumption",
+   "id": "existing-house",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "severe-idaho",
+   "id": "smaller-synthetic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "christian-shirt",
+   "id": "computational-argument",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "obvious-cleanup",
+   "id": "violent-civilization",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "damaged-republican",
+   "id": "south-oxide",
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "raising-needle",
+   "id": "sunrise-sugar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "sublime-quick",
+   "id": "supported-humor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "enclosed-phone",
+   "id": "driving-correlation",
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "retained-outreach",
+   "id": "billion-manitoba",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "bottom-organic",
+   "id": "informal-resource",
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "concrete-viewer",
+   "id": "divine-fifth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "declared-specialist",
+   "id": "smoking-cambridge",
    "metadata": {},
    "source": [
     "## Salmon quantification"
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "french-trace",
+   "id": "young-nurse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "favorite-brooklyn",
+   "id": "cooked-newark",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "corresponding-investigator",
+   "id": "cardiac-restriction",
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "buried-narrow",
+   "id": "lined-halifax",
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "moral-celebrity",
+   "id": "visible-impossible",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "sunrise-monte",
+   "id": "combined-injury",
    "metadata": {},
    "outputs": [
     {
@@ -942,13 +942,13 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "organizational-chosen",
+   "id": "personal-chase",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2aba730576d0>]"
+       "[<matplotlib.lines.Line2D at 0x2b5d78660d30>]"
       ]
      },
      "execution_count": 30,
@@ -982,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "compound-surfing",
+   "id": "veterinary-manner",
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "collected-slide",
+   "id": "associate-finder",
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "instrumental-arthritis",
+   "id": "nonprofit-roulette",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "controlled-chaos",
+   "id": "reserved-bread",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "organizational-sixth",
+   "id": "minor-checklist",
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "elegant-trance",
+   "id": "optimum-grammar",
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "musical-conspiracy",
+   "id": "sunrise-slovak",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "improving-crash",
+   "id": "fewer-compression",
    "metadata": {},
    "outputs": [
     {
@@ -1198,7 +1198,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "collaborative-generator",
+   "id": "aware-spirituality",
    "metadata": {},
    "outputs": [
     {
@@ -1234,7 +1234,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "delayed-stability",
+   "id": "loved-combination",
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "placed-chassis",
+   "id": "comprehensive-terrorism",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "meaningful-stomach",
+   "id": "signal-bikini",
    "metadata": {},
    "source": [
     "## Overlap between annotations"
@@ -1299,7 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "balanced-difficulty",
+   "id": "least-cardiff",
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1534,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "amateur-weekly",
+   "id": "ranging-camcorder",
    "metadata": {},
    "outputs": [
     {
@@ -1567,7 +1567,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "celtic-collaboration",
+   "id": "forced-indianapolis",
    "metadata": {},
    "outputs": [
     {
@@ -1615,7 +1615,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lasting-turkish",
+   "id": "fantastic-solid",
    "metadata": {},
    "source": [
     "All three quantification methods perform similar when using the Gencode annotation and reference for alignment with nf-core rnaseq pipeline"
@@ -1623,7 +1623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "touched-buyer",
+   "id": "joined-token",
    "metadata": {},
    "source": [
     "## SCVI testrun\n",
@@ -1633,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "dirty-chinese",
+   "id": "nasty-israel",
    "metadata": {},
    "outputs": [
     {
@@ -1669,7 +1669,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "treated-surveillance",
+   "id": "threaded-simple",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1679,7 +1679,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "diagnostic-ready",
+   "id": "verified-cherry",
    "metadata": {},
    "outputs": [
     {
@@ -1706,7 +1706,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "genuine-volleyball",
+   "id": "secure-engagement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1716,7 +1716,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "defined-minority",
+   "id": "automotive-astronomy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1728,7 +1728,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "possible-humor",
+   "id": "thousand-warrior",
    "metadata": {},
    "outputs": [
     {
@@ -1769,7 +1769,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "legitimate-lender",
+   "id": "straight-netherlands",
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "protective-slide",
+   "id": "nervous-induction",
    "metadata": {},
    "outputs": [],
    "source": []
