--- a/notebooks/scRNAseq_analysis.ipynb
+++ b/notebooks/scRNAseq_analysis.ipynb
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "sunrise-andrews",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
        "    layers: 'counts'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,15 +531,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "varied-fifteen",
    "metadata": {},
    "outputs": [],
    "source": [
     "#basically seurat preprocessing\n",
     "sc.pp.normalize_total(adata)\n",
-    "sc.pp.log1p(adata)\n",
-    "sc.pp.scale(adata)"
+    "sc.pp.log1p(adata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a367409a-9743-448e-a3df-fffb733fcc6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = adata.to_df()\n",
+    "df.columns = df.columns.to_list()\n",
+    "df.index = [i + '_' + j for i, j in zip(df.index.to_list(), adata.obs.sample_genotype.values)]\n",
+    "df = df.T\n",
+    "df.reset_index(inplace = True)\n",
+    "df.columns = ['Gene'] + df.columns.to_list()[1:]\n",
+    "df.to_csv('example_rnaseq_data.csv', index = False)"
    ]
   },
   {
